REGRESSION: Can't submit a form with <input type=radio required> https://bugs.webkit.org/show_bug.cgi?id=40429

Reviewed by Darin Adler.

WebCore:

Validity state was not updated correctly for radio buttons, and it
prevents form submission even if a radio button group has a
checked radio button.

Test: fast/forms/interactive-validation-required-radio.html

* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::updateCheckedRadioButtons):
 Call setNeedsValidityCheck() for all of radio buttons in the same group
 to update validity state.
(WebCore::HTMLInputElement::setChecked):
 Remove setNeedsValidityCheck() call because it is called in
 updateCheckedRadioButtons().

LayoutTests:

* fast/forms/ValidityState-valueMissing-radio-expected.txt:
* fast/forms/interactive-validation-required-radio-expected.txt: Added.
* fast/forms/interactive-validation-required-radio.html: Added.
* fast/forms/script-tests/ValidityState-valueMissing-radio.js:
  We need to test against a radio group with at least three radio buttons
  because we should test behaviors of
  - checked
  - unchecked
  - neither checked nor unchecked

Canonical link: https://commits.webkit.org/52075@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61060 268f45cc-cd09-0410-ab3c-d52691b4dbfc